# hello_solana

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/deploy/: deploy.ts  main.ts
src/deploy/util/store/: config.json
src/program/: Cargo.toml
src/program/src/: lib.rs
