
[package]
name = "hello_solana"
version = "0.0.1"
description = "Hello Solana program written in Rust"
authors = ["Sancar Yıldırım <sncryldrm@gmail.com>"]
repository = "https://github.com/sncryldrm/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
byteorder = "1.3"
solana-program = "=1.6.6"

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
crate-type = ["cdylib", "lib"]
